# GPS_IMU_C_Driver

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dependencies.sh  gps_map_test  log_783.txt  log_dog.txt  setup.sh  test_gps  test_imu
extended_kalman_filter/: ekfNavINS.cpp  ekfNavINS.h
gps_module/: gps.cpp  gps.h
imu_module/: .imu.cpp.swo  .imu.cpp.swp  imu.cpp  imu.h
include/: ekfIMU.h  ekfNavINS.h  gps.h  imu.h
include/EKF/: ekfNavINS.h
include/gps/: gps.hpp
include/imu/: imu.hpp
include/ubx/: ubx_msg.hpp
sam_m8q_module/: gps.cpp  new_sam_m8q.h  sam_m8q.cpp  sam_m8q.h
src/: ekfIMU.cpp  ekfNavINS.cpp  gps.cpp  imu.cpp  ubx_msg.cpp
src/EKF/: ekfNavINS.cpp
src/gps/: CMakeLists.txt  gps.cpp
src/imu/: CMakeLists.txt  imu.cpp
src/ubx/: CMakeLists.txt  ubx_msg.cpp
tests/calibration/: calibrate_accel_gyro.py  imu_mag_calibrate.cpp  imu_mag_calibrate.py  imu_mag_calibration.cpp  raw_mag_data.csv  results.txt
tests/gps_tests/: .log_dog.txt.swp  gps_map.cpp  log_dog.txt  test_gps.cpp  test_gps.py  test_i2c.py  test_i2c_comm.cpp  test_ubx  test_ubx.cpp  ubx_msg.cpp  ubx_msg.h  weak_test.cpp
tests/graphing/: CMakeLists.txt  gps_graphs.cpp  imu_graphs.cpp  test_contour.cpp
tests/imu_tests/: .test_imu.cpp.swp  test_imu.cpp  test_imu.py
tests/kalman_tests/: kalman_animation.py  kalman_data.py  kalman_gps_imu_plots.py  kalman_imu_animation.py  kalman_imu_plots.py  kalman_mmap.py  kalman_plots.py  serial_test.py  test_kalman.cpp  test_kalman_imu.cpp
tests/mahony_AHRS/: mahony_ahrs.cpp  mahony_animation.py
tests/myenv/: pyvenv.cfg
ubx_lib/: ubx_msg.cpp  ubx_msg.h
